--- a/templates/login.html
+++ b/templates/login.html
@@ -13,16 +13,17 @@
 	</div>
 	<div class="row justify-content-center align-items-center">
 		<!-- TODO: Actual Form -->
-		<form>
+		<form method="POST" action="/login">
+			<input type="hidden" name="type" value="user" />
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+				<input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
 				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
 					else.</small>
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1">
+				<input type="password" name="password" class="form-control" id="exampleInputPassword1" required>
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
