--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,20 @@
 		</div>
 	</nav>
 	<div id="main" class="pb-5">
+		{% with errors = get_flashed_messages(category_filter=["error"]) %}
+			{% if errors %}
+				{%- for err in errors %}
+				<div class="container pt-4">
+					<div class="alert alert-danger alert-dismissable fade show" role="alert">
+						{{err}}
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+				</div>
+				{% endfor -%}
+			{% endif %}
+		{% endwith %}
 		{% block content %}{% endblock %}
 	</div>
 	<div style="height: 100px"></div>
