--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,20 @@
 				{% endfor -%}
 			{% endif %}
 		{% endwith %}
+		{% with success = get_flashed_messages(category_filter=["success"]) %}
+			{% if success %}
+				{%- for msg in success %}
+				<div class="container pt-4">
+					<div class="alert alert-success alert-dismissable fade show" role="alert">
+						{{msg}}
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+				</div>
+				{% endfor -%}
+			{% endif %}
+		{% endwith %}
 		{% block content %}{% endblock %}
 	</div>
 	<div style="height: 100px"></div>
