--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,10 @@
 				</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav mr-auto">
+				<!--Just to specify which link is active-->
 				{% block navbar %}
 				<li class="nav-item">
-					<a class="nav-link" href="/">Dashboard</a>
+					<a class="nav-link" href="/"> Dashboard</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
