--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,13 @@
 					<a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="/addItem"><i class="fas fa-hand-holding-usd"></i> Donate</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
 				</li>
 				{% endblock %}
 			</ul>
