--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -1,6 +1,27 @@
 {% extends 'base.html' %}
 {% block title %}User Profile{% endblock %}
 
+{% block navbar %}
+<li class="nav-item">
+    <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+</li>
+<li class="nav-item active">
+    <a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/addItem"><i class="fas fa-hand-holding-usd"></i> Donate</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
+</li>
+{% endblock %}
+
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeBrown">
 	<div class="container">
