--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -1,6 +1,38 @@
 {% extends 'base.html' %}
 {% block title %}Organizations{% endblock %}
 
+<!--When the user is logged in-->
+{% block navbar %}
+<li class="nav-item">
+	<a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link" href="/dashboard"><i class="fas fa-book-open"></i> Dashboard</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link" href="/userProfile"><i class="far fa-user"></i> My Profile</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link" href="/addItem"><i class="fas fa-hand-holding-usd"></i> Donate</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link" href="/items"><i class="fas fa-store"></i> My Items</a>
+</li>
+<li class="nav-item active">
+	<a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
+</li>
+{% endblock %}
+
+<!--When the user is not logged in-->
+{% block navbar_nologin %}
+<li class="nav-item">
+	<a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
+</li>
+<li class="nav-item active">
+	<a class="nav-link" href="/orgs"><i class="far fa-building"></i> Organizations</a>
+</li>
+{% endblock %}
+
 {% block content %}
 <div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
 	<div class="container">
