--- a/templates/viewOrg.html
+++ b/templates/viewOrg.html
@@ -75,6 +75,11 @@
                     <p>Behind Mall of Arabs</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 text-right">
+                    <a href="/orgs" class="btn btn-primary">Back</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
