--- a/templates/viewUser.html
+++ b/templates/viewUser.html
@@ -79,6 +79,11 @@
                     <p>{{userData[9]}}</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 text-right">
+                    <a href="/orgs" class="btn btn-primary">Back</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
