--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!--Card BEGIN-->
-<div class="container pb-5 center-block">
+<div class="container pt-5">
 	{% if type == 'user' %}
 	<div class="row align-items-center mt-3">
 		<div class="col">
